增加部分手动测试case

--- a/assets/widget/index.html
+++ b/assets/widget/index.html
@@ -35,6 +35,7 @@
             </div>
             <div class="" data-control="BOX">
                 <div class="button ub ub-ac bc-text-head ub-pc bc-btn" id="uexDevice" onclick="openTestCase('uexDevice')">uexDevice</div>
+                <div class="button ub ub-ac bc-text-head ub-pc bc-btn" id="uexDeviceManualTest" onclick='uexWindow.open({name:"test", data:"uexDevice.html"});'>uexDevice手动测试</div>
             </div>
 
         </div>
